--- a/ariExpressDjango/mainApp/templates/viewDiscounts.html
+++ b/ariExpressDjango/mainApp/templates/viewDiscounts.html
@@ -10,21 +10,43 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a46df6f46f.js" crossorigin="anonymous"></script>
+    <style>
+      .action-column {
+          width: 20%;
+      }
+    </style>
 </head>
 
 
 <body>
   <h1>Discounts</h1>
-    {% for key, value in discounts.items %}
-        <h3>{{ key }} : {{ value }}</h3>
-    
-      <form method="post" action="{% url 'mainApp:viewDiscounts' storename %}">
-        {% csrf_token %}
-        <input type="hidden" name="discount_id" value="{{ key }}">
-        <button type="submit" class="btn btn-outline-dark" name="removeDiscount">Remove</button>
-      </form>
-    {% empty %}
-    <h3>No discounts in this store.</h3>
-    {% endfor %}
+  <table class="table table-hover">
+    <thead>
+        <tr>
+            <th>ID</th>            
+            <th>Discounts</th>
+            <th class="action-column">Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for key, value in discounts.items %}
+        <tr>
+            <td>{{ key }}</td>
+            <td>{{ value }}</td>
+            <td>
+              <form method="post" action="{% url 'mainApp:viewDiscounts' storename %}">
+                {% csrf_token %}
+                <input type="hidden" name="discount_id" value="{{ key }}">
+                <button type="submit" class="btn btn-outline-dark" name="removeDiscount">Remove</button>
+              </form>
+            </td>
+        </tr>
+        {% empty %}
+        <tr>
+          <td colspan="6">No discounts in this store yet.</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+  </table>
 </body>
 {% endblock %}
